--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "dev"
   ],
   "author": "Vinícius Valverde",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.4"
+  }
 }
